--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-redux-loading": "^4.6.1",
